--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,11 +1,14 @@
 name: Run Python linter and formatter
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+    paths-ignore:
+      - '**.md'
+      - 'lab/**'
+      - 'assets/**'
+
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
     paths-ignore:
       - '**.md'
       - 'lab/**'
