--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,8 +3,17 @@ name: Run Python E2E tests
 on:
   push:
     branches: [ main ]
+    paths-ignore:
+      - '**.md'
+      - 'lab/**'
+      - 'assets/**'
+
   pull_request:
     branches: [ main ]
+    paths-ignore:
+      - '**.md'
+      - 'lab/**'
+      - 'assets/**'
 
 jobs:
   test_package:
