--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -1,13 +1,13 @@
 [project]
 name = "flaskapp"
 version = "1.0.0"
-description = "Create a relecloud demo application with flask and postgres-flexible"
+description = "Create a relecloud demo application with flask and mysql-flexible"
 dependencies = [
     "Flask==2.3.2",
     "opencensus-ext-azure==1.1.9",
     "opencensus-ext-flask==0.8.2",
     "SQLAlchemy==2.0.17",
-    "psycopg2-binary==2.9.6",
+    "mysql-connector-python==8.3.0",
     "Flask-Migrate==4.0.4",
     "Flask-SQLAlchemy==3.1.1",
     ]
