--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -48,5 +48,5 @@
     "features": {
         "ghcr.io/azure/azure-dev/azd:latest": {}
     },
-    "postCreateCommand": "playwright install chromium --with-deps && pip install -e src && python3 -m flask --app src/flaskapp db upgrade --directory src/flaskapp/migrations && python3 -m flask --app src/flaskapp seed --filename src/seed_data.json"
+    "postCreateCommand": "playwright install chromium --with-deps && pip install -e src && export MYSQL_HOST=localhost && export MYSQL_DATABASE=relecloud && export MYSQL_USER=root && export MYSQL_PASS=app_password && python3 -m flask --app src/flaskapp db upgrade --directory src/flaskapp/migrations && python3 -m flask --app src/flaskapp seed --filename src/seed_data.json"
 }
