--- a/.devcontainer/docker-compose_dev.yml
+++ b/.devcontainer/docker-compose_dev.yml
@@ -30,9 +30,8 @@ services:
     network_mode: service:db
     environment:
       MYSQL_HOST: db
-      MYSQL_ROOT_PASSWORD: app_password
       MYSQL_DATABASE: relecloud
-      MYSQL_USER: app_user
+      MYSQL_USER: root
       MYSQL_PASS: app_password
 
     command: sleep infinity
