--- a/.devcontainer/docker-compose_dev.yml
+++ b/.devcontainer/docker-compose_dev.yml
@@ -6,7 +6,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: app_password
       MYSQL_DATABASE: relecloud
-      MYSQL_USER: app_user
+      MYSQL_USER: root
       MYSQL_PASS: app_password
 
     restart: unless-stopped
