--- a/.devcontainer/docker-compose_dev.yml
+++ b/.devcontainer/docker-compose_dev.yml
@@ -30,6 +30,7 @@ services:
     network_mode: service:db
     environment:
       MYSQL_HOST: db
+      MYSQL_ROOT_PASSWORD: app_password
       MYSQL_DATABASE: relecloud
       MYSQL_USER: root
       MYSQL_PASS: app_password
